# a2a-agent-bootstrapping

./: CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  modal_app.py  project-spec.md  pyproject.toml  test_a2a_agents.sh  test_search.py
src/a2a_agents/: __init__.py  a2a_agents.py  a2a_apps.py  code_agent.py  code_agent_router.py  config.py  data_transformation_agent.py  data_transformation_router.py  modal_app.py  modal_app_old.py  models.py  planning_agent.py  planning_agent_router.py  research_agent.py  research_agent_router.py  research_modal_app_old.py  simple_code_app.py  simple_data_app.py  simple_planning_app.py  simple_research_app.py
src/a2a_agents/agents/: __init__.py  code.py  data_transformation.py  planning.py  research.py
src/a2a_agents/apps/: __init__.py  code_app.py  data_app.py  middleware.py  planning_app.py  research_app.py
tests/: debug_a2a.py  test_a2a_agents.py  test_a2a_client.py  test_agent_direct.py  test_agent_with_search.py  test_all_agents.py  test_all_simple_agents.py
